# qmd

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust-publish.yml
qmd/: Cargo.toml
qmd-cli/: Cargo.toml
qmd-cli/src/: cli.rs  handlers.rs  main.rs
qmd-mcp/: Cargo.toml
qmd-mcp/src/: server.rs
qmd/examples/: collections.rs  documents.rs  embedding.rs  fts_search.rs  hybrid_search.rs  maintenance.rs  query_expansion.rs  quickstart.rs  rerank.rs  vector_search.rs
qmd/examples/data/: async-await.md  collections.md  error-handling.md  modules.md  ownership.md  rust-basics.md  testing.md  traits.md
qmd/src/: cli.rs  collections.rs  config.rs  error.rs  formatter.rs  lib.rs  llm.rs  main.rs  store.rs
