[package]
name = "qmd-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "CLI for qmd - lightweight SOTA local search engine for AI agents"
authors = ["QNTX <x@qntx.fun>"]
keywords = ["markdown", "search", "cli", "fts5", "ai"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "qmd"
path = "src/main.rs"

[dependencies]
qmd = { path = "../qmd" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
glob.workspace = true
serde_json.workspace = true
walkdir.workspace = true

[lints]
workspace = true
