[package]
name = "qmd-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
description = "MCP server for qmd - lightweight SOTA local search engine for AI agents"
authors = ["QNTX <x@qntx.fun>"]
keywords = ["markdown", "search", "mcp", "fts5", "ai"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]

[lints]
workspace = true
