[package]
name = "qmd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
authors = ["QNTX <x@qntx.fun>"]
description = "Lightweight SOTA local search engine for AI agents in Rust."
keywords = ["markdown", "search", "cli", "fts5"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "qmd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
dirs.workspace = true
glob.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[lints]
workspace = true
