[package]
name = "qmd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
authors = ["QNTX <x@qntx.fun>"]
description = "Lightweight SOTA local search engine for AI agents in Rust."
keywords = ["markdown", "search", "embedding", "fts5", "ai"]
categories = ["text-processing", "database"]

[lib]
name = "qmd"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
colored.workspace = true
dirs.workspace = true
fuzzy-matcher.workspace = true
glob.workspace = true
indicatif.workspace = true
llama-cpp-2.workspace = true
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
walkdir.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
